# taixuan-translator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  __init__.py  ecosystem.config.json  main.py  pyproject.toml  requirements.txt  silent_entry.py  太玄智译_使用说明书.docx
api/: __init__.py  main.py  run_server.py  schemas.py
api/routers/: __init__.py  engines.py  export.py  status.py  translate.py  upload.py
core/: __init__.py  config.py  exceptions.py  utils.py
data/: __init__.py  cache.py  database.py  models.py
docs/: DEMO_GUIDE.md  DESKTOP_TEST_REPORT.md  INSTALL.md  MULTI_ENGINE_SETUP.md  REGRESSION_TEST_REPORT.md  TEST_CASES.md  TEST_CASES_V2.md  TEST_REPORT_V3.md  UI_DESIGN_BRIEF.md  UI_DESIGN_HANDOVER.md  UI_FINAL_HANDOVER.md  UI_OPTIMIZATION_REPORT_v3.md  batch_translation_final_report.md  environment_report.md  translation_quality_report.md
docx_generator/: __init__.py  core.py
pdf_parser/: __init__.py  core_parser.py  formula_extractor.py
scripts/: check_api.py  check_engines.py  e2e_test.py  migrate_db.py  test_upload.py
services/: __init__.py  export_service.py  file_parser.py  translation_batch.py  translation_engine.py
tests/: __init__.py  test_api.py  test_cache.py  test_config.py  test_factory.py  test_services.py  test_translator.py
translator/: __init__.py  base.py  claude_engine.py  custom_engine.py  deepl_engine.py  deepseek_engine.py  factory.py  gemini_engine.py  grok_engine.py  minimax_engine.py  ollama_engine.py  openai_engine.py  qwen_engine.py
translator/cache/: translations.json
translator/output/: translation_summary_20260401_004822.md  translation_summary_20260401_004833.md  translation_summary_20260401_185640.md  translations_demo_20260401_004822.json  translations_demo_20260401_004833.json  translations_demo_20260401_185640.json
ui/: launcher.py  main_window.py
ui/web/: app.js  index.html  results.css  results.html  results.js  styles.css
